# mcp-shopping-assistant-py

./: .env.example  .gitignore  Dockerfile  README.md  STREAMING_API_FIX.md  generate_credentials.py  oauth_quickstart.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  setup_and_verify.sh  setup_openapi.sh  start_all.sh  start_chatgpt_mcp.sh  start_openapi_oauth.sh  test_agent_response.py  test_api_key_formats.py  test_auth_still_works.py  test_chatgpt_integration.py  test_chatgpt_mcp.py  test_chatgpt_oauth.py  test_complete_format.py  test_enhanced_openapi.py  test_fastapi_response_format.py  test_health.py  test_html_responses.py  test_iframe_response.py  test_integration.py  test_invoke_debug.py  test_invoke_simple.py  test_langgraph_direct.py  test_mcp_resource_format.py  test_oauth.py  test_oauth_discovery.sh  test_okta_oauth.py  test_payload_format.py  test_privacy_compliance.py  test_reauth_link.py  test_response_format.py  (+3 more)
examples/: test_client.py
src/agent_mcp/: __init__.py  agent.py  chatgpt_fastapi_server.py  chatgpt_mcp_server.py  config.py  html_formatter.py  main.py  mcp_server.py  oauth.py  openapi_oauth_server.py  openapi_oauth_server.py.backup  openapi_server.py  protocol.py
tests/: __init__.py  test_agent.py  test_mcp_server.py  test_protocol.py
web_ui/: README.md  index.html  server.py
